Update viewport meta tag and enhance CSS for mobile safe areas
- Added 'viewport-fit=cover' to the viewport meta tag in index.html for better mobile display.
- Standardized font quotes in index.css and added safe area insets for mobile devices to improve layout on iPhone and other devices with notches.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/kettlebell-icon.png" />
     <link rel="alternate icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#2563eb" />
     <meta name="description" content="Track your Occam's Protocol training sessions" />
     <link rel="apple-touch-icon" href="/kettlebell-icon.png" />
